--- a/Payments/src/templates/add_Card.html
+++ b/Payments/src/templates/add_Card.html
@@ -70,8 +70,11 @@
 
               <!-- Submit -->
               <div class="control-group">
+
                 <div class="controls">
+                  <input type="button" onclick="location.href= '{{ request.session.cancel }}'" class="btn btn-danger" value="Cancel">
                   <input type="submit" class="btn btn-success" value="Add Card">
+
                 </div>
               </div>
 
