--- a/Payments/src/templates/delete_Card.html
+++ b/Payments/src/templates/delete_Card.html
@@ -44,8 +44,7 @@
 
                 <div class="controls">
                   <input type="button" onclick="location.href= '{{ request.session.cancel }}'" class="btn btn-warning" value="Cancel">
-                  <input type="submit" class="btn btn-danger" value="Remove Card">
-
+                  <input type="submit" class="btn btn-danger" value="Remove Card" onclick="return confirm('Are you sure that you want to remove this card?')">
                 </div>
               </div>
 
