--- a/Payments/src/templates/add_Card.html
+++ b/Payments/src/templates/add_Card.html
@@ -3,7 +3,18 @@
     {% load static %}
     <!-- Bootstrap Core CSS -->
     <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <script>
+        function changeValue(){
+            var check = document.getElementById("checkbox");
+            var defined = document.getElementById("defined");
+            if(defined.value == "True"){
+                defined.value = "False";
+            }else{
+                defined.value = "True";
+            }
 
+        }
+    </script>
 </head>
 <body>
     <div class="container">
@@ -79,7 +90,15 @@
                 </div>
               </div>
 
+              <div class="control-group">
+
+                <div class="controls">
+                    <input onchange="changeValue()" type="checkbox" id="checkbox" value="{{ request.session.defined }}"> Define this card to receive money?
+                </div>
+              </div>
+
                 <input type="hidden" id="cache_id" name="cache_id" class="span2">
+                <input type="hidden" id="defined" name="defined" class="span2">
 
 
               <!-- Submit -->
@@ -102,6 +121,17 @@
             cache_id.value = window.location.href.split("/")[window.location.href.split("/").length -2];
             var form = document.getElementById("form");
             form.action = "/api/v1/cards/add_card/" + window.location.href.split("/")[window.location.href.split("/").length -2] + "/";
+            var check = document.getElementById("checkbox");
+            var defined = document.getElementById("defined");
+            if (check.value != "True") {
+                check.checked = false;
+                check.disabled = false;
+                defined.value = "False";
+            } else {
+                defined.value = "True";
+                check.checked = true;
+                check.disabled = true;
+            }
         }
 
     </script>
