--- a/Payments/src/templates/update_Card_choose.html
+++ b/Payments/src/templates/update_Card_choose.html
@@ -47,7 +47,7 @@
                   <div class="control-group">
 
                     <div class="controls">
-                      <input type="button" id="cancel" onclick="location.href= '{{ request.session.cancel }}'" class="btn btn-danger">
+                      <input type="button" id="cancel" onclick="location.href= '{{ request.session.cancel }}'" class="btn btn-warning">
                       <input type="submit" id="button" class="btn btn-success" value="Update Card">
 
                     </div>
