--- a/Payments/src/templates/add_Card.html
+++ b/Payments/src/templates/add_Card.html
@@ -105,7 +105,7 @@
               <div class="control-group">
 
                 <div class="controls">
-                  <input type="button" onclick="location.href= '{{ request.session.cancel }}'" class="btn btn-danger" value="Cancel">
+                  <input type="button" onclick="location.href= '{{ request.session.cancel }}'" class="btn btn-warning" value="Cancel">
                   <input type="submit" class="btn btn-success" value="Add Card">
 
                 </div>
