--- a/Payments/src/templates/mycards.html
+++ b/Payments/src/templates/mycards.html
@@ -62,7 +62,7 @@
                                    value="Delete">
 
             </form>
-        <button type="button" id="cancel" style="float: left" onclick="location.href= '{{ request.session.close }}'"
+        <button type="button" id="cancel" style="float: left" onclick="window.close()"
                        class="btn btn-warning" value="Close">Close</button>
     </div>
 <script type="text/javascript">
