--- a/Payments/src/templates/mycards.html
+++ b/Payments/src/templates/mycards.html
@@ -6,11 +6,13 @@
 </head>
 <body>
 <div class="page-header">
-  <h1 class="glyphicon glyphicon-credit-card">EasyPayments <small>My Cards</small></h1>
+  <span class="glyphicon glyphicon-credit-card"></span><h1>EasyPayments</h1>
 </div>
         <div class="container">
             <div class="row-fluid">
-            
+            <div id="legend">
+                    <legend class="">My Cards</legend>
+                  </div>
                 {% ifnotequal request.session.error null %}
                 <div id="alert" class="alert alert-danger">
                     {{ request.session.error }}
