--- a/Payments/src/templates/mycards.html
+++ b/Payments/src/templates/mycards.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="page-header">
-  <span class="glyphicon glyphicon-credit-card"></span><h1>EasyPayments</h1>
+  <span class="glyphicon glyphicon-credit-card" aria-hidden="true"></span><h1>EasyPayments</h1>
 </div>
         <div class="container">
             <div class="row-fluid">
