--- a/Payments/src/templates/mycards.html
+++ b/Payments/src/templates/mycards.html
@@ -3,6 +3,7 @@
     {% load static %}
     <!-- Bootstrap Core CSS -->
     <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'font-awesome-4.7.0/css/font-awesome.min.css' %}" rel="stylesheet">
 </head>
 <body>
 <div class="page-header">
