--- a/Payments/src/templates/payment.html
+++ b/Payments/src/templates/payment.html
@@ -3,6 +3,7 @@
     {% load static %}
     <!-- Bootstrap Core CSS -->
     <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'font-awesome-4.7.0/css/font-awesome.min.css' %}" rel="stylesheet">
     <script>
         function changeValue() {
             var check = document.getElementById("checkbox");
@@ -21,6 +22,9 @@
     </script>
 </head>
 <body>
+<div class="page-header">
+  <h1 style="margin-left: 100px"> <i class="fa fa-credit-card-alt" aria-hidden="true"></i> EasyPayments</h1>
+</div>
 <div class="container">
     <div class="row-fluid">
         <div id="legend">
