--- a/Payments/src/templates/index.html
+++ b/Payments/src/templates/index.html
@@ -1,5 +1,9 @@
 <html>
-    <div>
-        hello
+    {% load static %}
+    <!-- Bootstrap Core CSS -->
+    <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'font-awesome-4.7.0/css/font-awesome.min.css' %}" rel="stylesheet">
+    <div class="page-header">
+        <h1 style="margin-left: 100px"> <i class="fa fa-credit-card-alt" aria-hidden="true"></i> EasyPayments</h1>
     </div>
 </html>
