--- a/Payments/src/templates/mycards.html
+++ b/Payments/src/templates/mycards.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="page-header">
-  <h1> <i class="fa fa-credit-card-alt" aria-hidden="true"></i> EasyPayments</h1>
+  <h1 style="margin-left: 100px"> <i class="fa fa-credit-card-alt" aria-hidden="true"></i> EasyPayments</h1>
 </div>
         <div class="container">
             <div class="row-fluid">
