--- a/Payments/src/templates/index.html
+++ b/Payments/src/templates/index.html
@@ -1,9 +1,68 @@
 <html>
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
     {% load static %}
     <!-- Bootstrap Core CSS -->
     <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'font-awesome-4.7.0/css/font-awesome.min.css' %}" rel="stylesheet">
+    <script>
+        function submit(){
+          var url = "/api/v1/apps/create/";
+          var xhr = new XMLHttpRequest();
+          var data = new FormData();
+          data.append('name', document.getElementById("name").value);
+          xhr.open('POST', url, true);
+          xhr.onreadystatechange = processRequest;
+          xhr.send(data);
+
+          function processRequest(e) {
+
+            if (xhr.readyState == 4 && xhr.status == 200) {
+               var response = JSON.parse(xhr.responseText);
+               document.getElementById("token_id").value = response.token_id;
+            }
+          }
+
+        }
+    </script>
     <div class="page-header">
         <h1 style="margin-left: 100px"> <i class="fa fa-credit-card-alt" aria-hidden="true"></i> EasyPayments</h1>
     </div>
 </html>
+<body>
+  <div class="container">
+      <div class="row-fluid">
+
+            <div id="legend">
+              <legend class="">Create a New Application</legend>
+            </div>
+
+            <!-- Name -->
+            <div class="control-group">
+              <label class="control-label"  for="name">Application Name</label>
+              <div class="controls">
+                <input type="text" id="name" name="name" value="{{ request.session.name }}" class="input-xlarge">
+              </div>
+            </div>
+
+            <div class="control-group">
+              <label class="control-label" for="token_id">Token ID</label>
+              <div class="controls">
+                <input type="text" id="token_id" readonly="readonly" name="token_id" value="" class="input-xlarge">
+              </div>
+            </div>
+
+            <!-- Submit -->
+            <div class="control-group">
+
+              <div class="controls">
+                <button type="submit" class="btn btn-success" onclick="submit()">Create App</button>
+              </div>
+            </div>
+
+      </div>
+  </div>
+</body>
