--- a/Payments/src/templates/index.html
+++ b/Payments/src/templates/index.html
@@ -23,6 +23,13 @@
             if (xhr.readyState == 4 && xhr.status == 200) {
                var response = JSON.parse(xhr.responseText);
                document.getElementById("token_id").value = response.token_id;
+               var para = document.createElement("font");
+               para.style.color = "darkred";
+               var node = document.createTextNode("     Please save your token ID!");
+               para.appendChild(node);
+               var element = document.getElementById("alert");
+               element.appendChild(para);
+
             }
           }
 
@@ -35,6 +42,9 @@
 <body>
   <div class="container">
       <div class="row-fluid">
+        <div class="form-horizontal" >
+
+        <fieldset>
 
             <div id="legend">
               <legend class="">Create a New Application</legend>
@@ -44,24 +54,25 @@
             <div class="control-group">
               <label class="control-label"  for="name">Application Name</label>
               <div class="controls">
-                <input type="text" id="name" name="name" value="{{ request.session.name }}" class="input-xlarge">
+                <input style="height: 25px" type="text" id="name" name="name" value="{{ request.session.name }}" class="input-xlarge">
               </div>
             </div>
 
-            <div class="control-group">
+            <div id="alert" class="control-group">
               <label class="control-label" for="token_id">Token ID</label>
               <div class="controls">
-                <input type="text" id="token_id" readonly="readonly" name="token_id" value="" class="input-xlarge">
+                <input style="height: 25px" type="text" id="token_id" readonly="readonly" name="token_id" value="" class="input-xlarge">
               </div>
             </div>
 
             <!-- Submit -->
             <div class="control-group">
-
               <div class="controls">
                 <button type="submit" class="btn btn-success" onclick="submit()">Create App</button>
               </div>
             </div>
+        </fieldset>
+      </div>
 
       </div>
   </div>
